adds settings feature

--- a/musica-phone/src/main/AndroidManifest.xml
+++ b/musica-phone/src/main/AndroidManifest.xml
@@ -35,23 +35,27 @@
 
         <activity
             android:name="com.musica.dashboard.home.DashboardActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name="com.musica.dashboard.user.signin.SignInActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name="com.musica.dashboard.user.register.RegisterUserActivity"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity
+            android:name="com.musica.common.settings.SettingsActivity"
+            android:exported="false" />
 
         <activity
             android:name=".getstarted.ErrorActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name=".getstarted.LandingActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
