refactors DashboardActivity change name of compose activity to Kosha adds SearchScreen implementation

--- a/musica-phone/src/main/AndroidManifest.xml
+++ b/musica-phone/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
 
         <activity
-            android:name="com.musica.dashboard.home.DashboardActivity"
+            android:name="com.musica.dashboard.DashboardActivity"
             android:exported="false" />
 
         <activity
