--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,12 +21,18 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: build debug
         run: ./gradlew assembleDebug
+
+      - name: build debug
+        run: ./gradlew build
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1.5.1
         with:
