--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,6 +35,10 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
+          coverage:
+            range: 75...100
+          flags:
+            - analytics
           fail_ci_if_error: true # optional (default = false)
           files: ./musica-phone/build/reports/kover/reportDebug.xml,./musica-common/build/reports/kover/reportDebug.xml,./dashboard-module/build/reports/kover/reportDebug.xml
         #          flags: unittests # optional
