--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,6 +7,8 @@ name: Android CI
 #    branches: [ "main" ]
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
     types: [ opened, reopened, synchronize ]
 
