--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,9 @@ on:
   pull_request:
     types: [ opened, reopened, synchronize ]
 
+permissions:
+  actions: read|write|none
+
 jobs:
   version-bump:
     if: github.ref == 'refs/heads/master'
