--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ on:
     types: [ opened, reopened, synchronize ]
 
 permissions:
-  actions: read|write|none
+  actions: read
 
 jobs:
   version-bump:
