--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,8 +14,9 @@ on:
 
 jobs:
   version-bump:
-    if: github.ref == 'refs/heads/master'
+#    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    permissions: {actions: write}
     steps:
       - uses: actions/checkout@v3
       - name: Bump version
