--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,11 +14,11 @@ on:
 
 jobs:
   version-bump:
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions: {actions: write}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: Bump version
         id: bump_version
         uses: oflynned/Android-Semantic-Release@master
