--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,8 @@ jobs:
   version-bump:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-    permissions: {actions: write}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v2
       - name: Bump version
