Update APIs to v2

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,12 +13,12 @@ on:
     types: [ opened, reopened, synchronize ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v2
       - name: Bump version
         id: bump_version
         uses: oflynned/Android-Semantic-Release@master
