--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,7 +53,7 @@ name: Distribute to Firebase App Distribution
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
