--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,53 +1,3 @@
-#name: Android CI
-#on:
-#  push:
-#    branches: [ "master" ]
-#  pull_request:
-#    branches: [ "main" ]
-
-#on:
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    types: [ opened, reopened, synchronize ]
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Bump version
-#        id: bump_version
-#        uses: oflynned/Android-Semantic-Release@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      - uses: actions/checkout@v3
-#      - name: set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#          cache: gradle
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      #
-#      #      - name: build debug
-#      #        run: ./gradlew assembleDebug
-#
-#      - name: build Build
-#        run: ./gradlew build
-#
-#      - name: upload artifact to Firebase App Distribution
-#        uses: wzieba/Firebase-Distribution-Github-Action@v1.5.1
-#        with:
-#          appId: ${{secrets.FIREBASE_APP_ID}}
-#          token: ${{secrets.FIREBASE_TOKEN}}
-#          #          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
-#          groups: testers
-#          file: musica-phone/build/outputs/apk/debug/musica-phone-debug.apk
-
 name: Distribute to Firebase App Distribution
 
 on:
@@ -78,11 +28,5 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload to Firebase App Distribution
-        run: |
-          curl -sL https://firebase.tools | bash
-          firebase appdistribution:distribute musica-phone/build/outputs/apk/debug/musica-phone-debug.apk \
-            --app ${{ secrets.FIREBASE_APP_ID }} \
-            --token ${{ secrets.FIREBASE_TOKEN }} \
-            --groups "internal-testers" \
-            --release-notes "New build from GitHub Actions"
+        run: ./gradlew appDistributionUploadDebug --stacktrace
 
