--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,12 +27,15 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Create Firebase service account JSON file
-        run: echo "$FIREBASE_SERVICE_ACCOUNT_JSON" > ${{ github.workspace }}/firebase-service-account.json
+      - name: Create firebase-service-account.json file
+        run: echo "$FIREBASE_SERVICE_ACCOUNT_JSON" > "$GITHUB_WORKSPACE/firebase-service-account.json"
         env:
           FIREBASE_SERVICE_ACCOUNT_JSON: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
 
-      - name: Run Gradle app distribution upload
+      - name: Grant permission to Gradle wrapper
+        run: chmod +x ./gradlew
+
+      - name: Run Gradle upload to Firebase App Distribution
         run: ./gradlew appDistributionUploadDebug
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase-service-account.json
