--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,13 +21,16 @@ jobs:
           distribution: 'temurin'
           java-version: '17'  # Match your project's version
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-
       - name: Create firebase-service-account.json file
         run: echo "$FIREBASE_SERVICE_ACCOUNT_JSON" > "$GITHUB_WORKSPACE/firebase-service-account.json"
         env:
           FIREBASE_SERVICE_ACCOUNT_JSON: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build APK
+        run: ./gradlew assembleDebug
 
       - name: Run Gradle upload to Firebase App Distribution
         run: ./gradlew assembleDebug ./gradlew appDistributionUploadDebug
