--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,16 +21,15 @@ jobs:
           distribution: 'temurin'
           java-version: '17'  # Match your project's version
 
-      - name: Create firebase-service-account.json file
-        run: echo "$FIREBASE_SERVICE_ACCOUNT_JSON" > "$GITHUB_WORKSPACE/firebase-service-account.json"
-        env:
-          FIREBASE_SERVICE_ACCOUNT_JSON: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
-
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build APK
         run: ./gradlew assembleDebug
+
+      - name: Decrypt Firebase service account json
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}" > ${{ github.workspace }}/firebase-service-account.json
 
       - name: Run Gradle upload to Firebase App Distribution
         run: ./gradlew appDistributionUploadDebug
