--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,9 +27,12 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Decrypt Firebase service account json
+      - name: Write Firebase service account JSON to file
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}" > ${{ github.workspace }}/firebase-service-account.json
+          printf '%s' "${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}" > ${{ github.workspace }}/firebase-service-account.json
+
+      - name: Debug print service account file (optional)
+        run: head -n 5 ${{ github.workspace }}/firebase-service-account.json
 
       - name: Run Gradle upload to Firebase App Distribution
         run: ./gradlew appDistributionUploadDebug
