--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleDebug
 
-      - name: Write Firebase service account JSON to file
+      - name: Decode Firebase service account key
         run: |
-          printf '%s' "${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}" > ${{ github.workspace }}/firebase-service-account.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}" | base64 --decode > ${{ github.workspace }}/firebase-service-account.json
 
       - name: Debug print service account file (optional)
         run: head -n 5 ${{ github.workspace }}/firebase-service-account.json
